plugins {
    `java-library`
    `maven-publish`
}

group = "club.tesseract.minestom"
version = System.getenv("TAG_VERSION") ?: "dev"

repositories {
    mavenCentral()
    maven("https://repo.hypera.dev/snapshots/") // luckperms (minestom) & Spark
    maven("https://repo.smolder.cloud/public/")

    maven("https://repo.lucko.me/") // spark-common
    maven("https://oss.sonatype.org/content/repositories/snapshots/") // spark-common's dependencies
}

dependencies {
    implementation(libs.lombok)
    annotationProcessor(libs.lombok)

    api(libs.minestom)
    api(libs.minestom.polar)
    api(libs.slf4j.api)

    /* Luckperms */
    api(libs.luckperms)
    api(libs.sponge.configurate.core)
    api(libs.sponge.configurate.hocon)
    /* End of Luckperms */

    /* Spark */
    api(libs.minestom.spark) {
        exclude(group = "me.lucko", module = "bytesocks-java-client")
    }
    api(libs.bytesocks.java.client)
    /* End of Spark */

    testImplementation(libs.logback)
    testImplementation(libs.minestom)
    testImplementation(libs.minestom.polar)
    testImplementation(libs.minestom.axiom)
    testImplementation(libs.fastutil)
    testImplementation(libs.luckperms)


    /* Spark */
    testImplementation(libs.minestom.spark){
        exclude(group = "me.lucko", module = "bytesocks-java-client")
    }
    testImplementation(libs.bytesocks.java.client)
    /* End of Spark */

    /* Luckperms */
    testImplementation(libs.luckperms)
    testImplementation(libs.sponge.configurate.core)
    testImplementation(libs.sponge.configurate.hocon)
    testImplementation(libs.hikari)
    testImplementation(libs.h2database) // Replace with database provider of your choice
    /* End of Luckperms */
}

java {
    withSourcesJar()
    withJavadocJar()

    toolchain.languageVersion = JavaLanguageVersion.of(25)
}

tasks {
    test {
        useJUnitPlatform()
    }

    compileJava {
        options.encoding = "UTF-8"
    }
}

publishing {

    repositories {
        maven {
            name = "release"
            url = uri("https://repo.tesseract.club/releases")
            credentials {
                username = System.getenv("MAVEN_USERNAME")
                password = System.getenv("MAVEN_SECRET")
            }
        }
    }

    publications {
        create<MavenPublication>("maven") {
            groupId = group as String
            artifactId = rootProject.name
            version = project.version as String
            from(components["java"])

            pom {
                name.set(project.name)
                description.set("")
                url.set("https://github.com/TropicalShadow/minestom-utils")

                developers {
                    developer {
                        id.set("tropicalshadow")
                        name.set("TropicalShadow")
                        email.set("me@tesseract.club")
                    }
                }

                issueManagement {
                    system.set("GitHub")
                    url.set("https://github.com/TropicalShadow/minestom-utils/issues")
                }

                scm {
                    connection.set("scm:git:git://github.com/TropicalShadow/minestom-utils.git")
                    developerConnection.set("scm:git:ssh://github.com/TropicalShadow/minestom-utils.git")
                    url.set("https://github.com/TropicalShadow/minestom-utils")
                    tag.set("HEAD")
                }

                ciManagement {
                    system.set("Github Actions")
                    url.set("https://github.com/TropicalShadow/minestom-utils/actions")
                }
            }

        }
    }
}
